<package>
  <name>settlerlib</name>
  <version>0.9.15</version>
  <description>
    Defines helper functions and routines that greatly help when trying to create a settler
    for a specific sensor channel. This package is experimental and unstable.
    Expect its APIs to change.
  </description>
  <author>Vijay Pradeep</author>
  <maintainer email="vrabaud@willowgarage.com">Vincent Rabaud</maintainer>
  <license>BSD</license>
  <url>http://www.ros.org/wiki/settlerlib</url>

  <build_depend>boost</build_depend>
  <build_depend>calibration_msgs</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>rostime</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>calibration_msgs</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>rostime</run_depend>
</package>
